Don't clear payee of second split onwards in scheduled tx

There are use cases where different payees are desirable, e.g.:

Split 1: Net Pay (Payee = employer)
Split 2: Gross Pay (Payee = employer)
Split 3: Income Tax (Payee = government)

BUG: 511821
(cherry picked from commit b40cf9221e6b213856bdb02879ea9b633cd092e7)